--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <string name="app_name">Idea Studio</string>
+    <string name="app_name">Eloyt</string>
     <string name="fb_app_id">1091320674278413</string>
 </resources>
